--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "standard-version",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "replacement for `npm version` with automatic CHANGELOG generation",
   "bin": "index.js",
   "scripts": {
-    "test": "standard"
+    "pretest": "standard",
+    "test": "nyc mocha --timeout=10000 test.js"
   },
   "repository": {
     "type": "git",
@@ -26,16 +27,19 @@
   },
   "homepage": "https://github.com/conventional-changelog/standard-version#readme",
   "dependencies": {
-    "add-stream": "^1.0.0",
     "chalk": "^1.1.3",
     "conventional-changelog": "^1.1.0",
     "conventional-recommended-bump": "^0.2.0",
-    "rimraf": "^2.5.2",
+    "figures": "^1.5.0",
+    "fs-access": "^1.0.0",
     "semver": "^5.1.0",
-    "tempfile": "^1.1.1",
     "yargs": "^4.3.2"
   },
   "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^2.4.5",
+    "nyc": "^6.2.1",
+    "shelljs": "^0.6.0",
     "standard": "^6.0.8"
   }
 }
