chore(keywords): add "standard" keyword \o/

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "automatic",
     "workflow",
     "version",
-    "angular"
+    "angular",
+    "standard"
   ],
   "author": "Ben Coe <ben@npmjs.com>",
   "license": "ISC",
