--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "bin": "index.js",
   "scripts": {
     "pretest": "standard",
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
     "test": "nyc mocha --timeout=10000 test.js"
   },
   "repository": {
@@ -37,6 +38,7 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
+    "coveralls": "^2.11.9",
     "mocha": "^2.4.5",
     "nyc": "^6.2.1",
     "shelljs": "^0.6.0",
