--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
     "chai": "^3.5.0",
     "coveralls": "^2.11.9",
     "mocha": "^2.4.5",
-    "nyc": "^6.4.1",
-    "shelljs": "0.6.0",
+    "nyc": "^6.4.2",
+    "shelljs": "^0.7.0",
     "standard": "^6.0.8"
   }
 }
