--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,7 +6,7 @@ environment:
     - nodejs_version: '0.12'
     - nodejs_version: '0.10'
 install:
-  - ps: Install-Product git
+  - choco install git
   - ps: Install-Product node $env:nodejs_version
   - set CI=true
   - npm -g install npm@latest
