--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,12 +6,13 @@ environment:
     - nodejs_version: '0.12'
     - nodejs_version: '0.10'
 install:
-  - choco install git
   - ps: Install-Product node $env:nodejs_version
   - set CI=true
   - npm -g install npm@latest
   - set PATH=%APPDATA%\npm;%PATH%
   - npm install
+  - git config --global user.name 'Appveyor'
+  - git config --global user.email 'dummy@example.org'
 matrix:
   fast_finish: true
 build: off
