fix: fix newline issues

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,6 +11,8 @@ install:
   - npm -g install npm@latest
   - set PATH=%APPDATA%\npm;%PATH%
   - npm install
+init:
+  - git config --global core.autocrlf true
   - git config --global user.name 'Appveyor'
   - git config --global user.email 'dummy@example.org'
 matrix:
