fix: continuing to turn dials and knobs

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,6 +16,8 @@ matrix:
 build: off
 version: '{build}'
 test_script:
+  - set GIT_COMMITTER_DATE='Wed Feb 16 14:00 2037 +0100'
+  - set GIT_AUTHOR_DATE='Wed Feb 16 14:00 2037 +0100'
   - node --version
   - npm --version
   - npm test
