--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,13 @@
+# OS
+.DS_Store
+
+# node.js & npm
 node_modules
 .nyc_output
+npm-debug.log
+
+# Editor files
+/.project
+/.settings
+/.idea
+/.vscode
