--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "standard-version",
   "version": "2.4.0",
   "description": "replacement for `npm version` with automatic CHANGELOG generation",
-  "bin": "index.js",
+  "bin": "cli.js",
   "scripts": {
     "pretest": "standard",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
@@ -37,6 +37,7 @@
     "conventional-recommended-bump": "^0.3.0",
     "figures": "^1.5.0",
     "fs-access": "^1.0.0",
+    "object-assign": "^4.1.0",
     "semver": "^5.1.0",
     "yargs": "^5.0.0"
   },
