chore: package.json engines field >=4.0, drop Node 0.10 and 0.12
BREAKING CHANGE: drop support for Node < 4.0 to enable usage of
new tools and packages.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "type": "git",
     "url": "git+https://github.com/conventional-changelog/standard-version.git"
   },
+  "engines": {
+    "node" : ">=4.0"
+  },
   "keywords": [
     "conventional-changelog",
     "recommended",
