--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "pretest": "standard",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
-    "test": "nyc mocha --timeout=20000 test.js"
+    "test": "nyc mocha --timeout=20000 test.js",
+    "release": "./cli.js"
   },
   "repository": {
     "type": "git",
