refactor(cli): split out cli module and executable module
this is for better modularity, and, for more convenient test.

before, you can't breakpoint-debug the source mostly when testing for
the usage of shelljs.
now, some of the test cases can be done potentially with this commit

--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "standard-version",
   "version": "3.0.0",
   "description": "replacement for `npm version` with automatic CHANGELOG generation",
-  "bin": "cli.js",
+  "bin": "bin/standard-version.js",
   "scripts": {
     "pretest": "standard",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "test": "nyc mocha --timeout=20000 test.js",
-    "release": "./cli.js"
+    "release": "bin/standard-version.js"
   },
   "repository": {
     "type": "git",
