--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "standard-version",
-  "version": "3.0.0",
+  "version": "4.0.0-0",
   "description": "replacement for `npm version` with automatic CHANGELOG generation",
   "bin": "bin/cli.js",
   "scripts": {
