--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,10 +1,10 @@
 environment:
   matrix:
     - nodejs_version: '6'
-    - nodejs_version: '5'
-    - nodejs_version: '4'
 install:
   - ps: Install-Product node $env:nodejs_version
+  - git config --global user.name 'Appveyor'
+  - git config --global user.email 'dummy@example.org'
   - set CI=true
   - npm -g install npm@latest
   - set PATH=%APPDATA%\npm;%PATH%
