--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "standard-version",
-  "version": "4.0.0",
+  "version": "4.1.0",
   "description": "replacement for `npm version` with automatic CHANGELOG generation",
   "bin": "bin/cli.js",
   "scripts": {
@@ -10,7 +10,9 @@
     "release": "bin/cli.js"
   },
   "nyc": {
-    "exclude": ["tmp/**"]
+    "exclude": [
+      "tmp/**"
+    ]
   },
   "repository": {
     "type": "git",
