--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "homepage": "https://github.com/conventional-changelog/standard-version#readme",
   "dependencies": {
+    "@bcoe/dotignore": "^0.1.1",
     "chalk": "^1.1.3",
     "conventional-changelog": "^1.1.0",
     "conventional-recommended-bump": "^1.0.0",
