--- a/package.json
+++ b/package.json
@@ -38,10 +38,10 @@
   },
   "homepage": "https://github.com/conventional-changelog/standard-version#readme",
   "dependencies": {
-    "@bcoe/dotignore": "^0.1.1",
     "chalk": "^1.1.3",
     "conventional-changelog": "^1.1.0",
     "conventional-recommended-bump": "^1.0.0",
+    "dotgitignore": "^1.0.1",
     "figures": "^1.5.0",
     "fs-access": "^1.0.0",
     "semver": "^5.1.0",
