--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "homepage": "https://github.com/conventional-changelog/standard-version#readme",
   "dependencies": {
+    "@commitlint/core": "^6.0.2",
     "chalk": "^1.1.3",
     "conventional-changelog": "^1.1.0",
     "conventional-changelog-meso": "git+https://github.com/ankur-kushwaha/conventional-changelog-meso.git",
@@ -45,6 +46,7 @@
     "dotgitignore": "^1.0.3",
     "figures": "^1.5.0",
     "fs-access": "^1.0.0",
+    "git-semver-tags": "^1.2.3",
     "semver": "^5.1.0",
     "yargs": "^8.0.1"
   },
