--- a/package.json
+++ b/package.json
@@ -41,10 +41,13 @@
     "chalk": "^2.4.1",
     "conventional-changelog": "^3.0.5",
     "conventional-recommended-bump": "^4.0.4",
+    "detect-indent": "^5.0.0",
+    "detect-newline": "^2.1.0",
     "dotgitignore": "^1.0.3",
     "figures": "^2.0.0",
     "fs-access": "^1.0.0",
     "semver": "^5.2.0",
+    "stringify-package": "^1.0.0",
     "yargs": "^12.0.2"
   },
   "devDependencies": {
