--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "replacement for `npm version` with automatic CHANGELOG generation",
   "bin": "bin/cli.js",
   "scripts": {
-    "pretest": "eslint .",
+    "posttest": "eslint .",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "test": "nyc mocha --timeout=20000 test.js",
     "release": "bin/cli.js"
@@ -39,12 +39,14 @@
   "homepage": "https://github.com/conventional-changelog/standard-version#readme",
   "dependencies": {
     "chalk": "^2.4.1",
-    "conventional-changelog": "^3.0.6",
-    "conventional-recommended-bump": "^4.0.4",
+    "conventional-changelog": "^3.1.2",
+    "conventional-changelog-config-spec": "^1.0.0",
+    "conventional-recommended-bump": "^4.1.1",
     "detect-indent": "^5.0.0",
     "detect-newline": "^2.1.0",
     "dotgitignore": "^2.1.0",
     "figures": "^2.0.0",
+    "find-up": "^3.0.0",
     "fs-access": "^1.0.0",
     "git-semver-tags": "^2.0.2",
     "semver": "^5.2.0",
@@ -53,7 +55,7 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
-    "coveralls": "^3.0.1",
+    "coveralls": "^3.0.3",
     "eslint": "^5.16.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.16.0",
