--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "bin": "bin/cli.js",
   "scripts": {
     "posttest": "eslint .",
-    "coverage": "nyc report --reporter=text-lcov | coveralls",
     "test": "nyc mocha --timeout=30000 test.js",
     "release": "bin/cli.js"
   },
@@ -14,10 +13,7 @@
       "tmp/**"
     ]
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/conventional-changelog/standard-version.git"
-  },
+  "repository": "conventional-changelog/standard-version",
   "engines": {
     "node": ">=8.0"
   },
