--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "standard-version",
+  "name": "@dwmkerr/standard-version",
   "version": "8.1.0",
   "description": "replacement for `npm version` with automatic CHANGELOG generation",
   "bin": "bin/cli.js",
