chore!: NodeJS@8 is no longer supported.
- The conventional-changelog packages that this repository relies on heavily have dropped support for NodeJS@8 (conventional-changelog/conventional-changelog/pull/599). While the current state (v8.0.0) of _this_ library still passes tests in NodeJS@8, with reaching EOL on 12/31/2019 this seems like a change we should introduce to avoid unexpected issues/conflicts with updates in dependencies.

see #549

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node: [8, 10, 12, 14]
+        node: [10, 12, 14]
     steps:
       - uses: actions/checkout@v2
       - run: git fetch --prune --unshallow
