--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,9 @@
 {
   "extends": [
     "config:base"
-  ]
+  ],
+  "pinVersions": false,
+  "rebaseStalePrs": true,
+  "gitAuthor": null,
+  "ignoreDeps": ["decamelize"]
 }
