--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "replacement for `npm version` with automatic CHANGELOG generation",
   "bin": "bin/cli.js",
   "scripts": {
+    "fix": "eslint . --fix",
     "posttest": "eslint .",
     "test": "nyc mocha --timeout=30000 test.js",
     "release": "bin/cli.js"
