--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "replacement for `npm version` with automatic CHANGELOG generation",
   "bin": "bin/cli.js",
   "scripts": {
+    "fix": "eslint . --fix",
     "posttest": "eslint .",
     "test": "nyc mocha --timeout=30000 test.js",
     "release": "bin/cli.js"
@@ -60,7 +61,7 @@
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-standard": "4.0.1",
     "mocha": "7.2.0",
-    "mock-git": "2.0.0",
+    "mock-git": "^2.0.0",
     "mockery": "2.1.0",
     "nyc": "14.1.1",
     "shelljs": "0.8.4"
