--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "mock-git": "^2.0.0",
     "mockery": "^2.1.0",
     "nyc": "^14.1.1",
-    "shelljs": "^0.8.4"
+    "shelljs": "^0.8.4",
+    "std-mocks": "^1.0.1"
   }
 }
