--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "homepage": "https://github.com/conventional-changelog/standard-version#readme",
   "dependencies": {
+    "@iarna/toml": "^2.2.5",
     "chalk": "^2.4.2",
     "conventional-changelog": "3.1.21",
     "conventional-changelog-config-spec": "2.1.0",
