--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "mockery": "^2.1.0",
     "nyc": "^14.1.1",
     "shelljs": "^0.8.4",
-    "std-mocks": "^1.0.1"
+    "std-mocks": "^1.0.1",
+    "strip-ansi": "^6.0.0"
   }
 }
