--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "git-semver-tags": "^4.0.0",
     "semver": "^7.1.1",
     "stringify-package": "^1.0.1",
+    "xmldom": "^0.3.0",
     "yargs": "^15.3.1"
   },
   "devDependencies": {
