--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,6 +3,7 @@ on:
     branches:
       - master
   pull_request:
+    types: [ assigned, opened, synchronize, reopened, labeled ]
 name: ci
 jobs:
   test:
@@ -11,7 +12,7 @@ jobs:
       matrix:
         node: [10, 12, 14]
         os: [ubuntu-latest, windows-latest]
-    env: 
+    env:
         OS: ${{ matrix.os }}
         NODE_VERSION: ${{ matrix.node }}
     steps:
