--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "standard-version",
+  "name": "commit-and-tag-version",
   "version": "9.5.0",
   "description": "replacement for `npm version` with automatic CHANGELOG generation",
   "bin": "bin/cli.js",
@@ -16,7 +16,7 @@
       "tmp/**"
     ]
   },
-  "repository": "conventional-changelog/standard-version",
+  "repository": "absolute-version/commit-and-tag-version",
   "engines": {
     "node": ">=10"
   },
@@ -33,9 +33,9 @@
   "author": "Ben Coe <ben@npmjs.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/conventional-changelog/standard-version/issues"
+    "url": "https://github.com/absolute-version/commit-and-tag-version/issues"
   },
-  "homepage": "https://github.com/conventional-changelog/standard-version#readme",
+  "homepage": "https://github.com/absolute-version/commit-and-tag-version#readme",
   "dependencies": {
     "chalk": "^2.4.2",
     "conventional-changelog": "3.1.25",
