--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "eslint": "^8.16.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-n": "^15.2.0",
     "eslint-plugin-promise": "^6.0.0",
     "mocha": "^10.0.0",
     "mock-fs": "^5.0.0",
